package app.controller;

public class AutomaticReportController {


}
